RESOLVED FIXED133106
REGRESSION (r169063) Fixed and sticky nodes misplaced on scrolling sometimes
https://bugs.webkit.org/show_bug.cgi?id=133106
Summary REGRESSION (r169063) Fixed and sticky nodes misplaced on scrolling sometimes
Simon Fraser (smfr)
Reported 2014-05-19 21:23:18 PDT
REGRESSION (r169063) Fixed and sticky nodes misplaced on scrolling sometimes
Attachments
Patch (19.29 KB, patch)
2014-05-19 21:31 PDT, Simon Fraser (smfr)
sam: review+
Simon Fraser (smfr)
Comment 1 2014-05-19 21:31:43 PDT
Simon Fraser (smfr)
Comment 2 2014-05-19 21:32:16 PDT
Simon Fraser (smfr)
Comment 3 2014-05-20 12:14:42 PDT
Note You need to log in before you can comment on or make changes to this bug.